# maxisioux.github.io

./: 404.html  LICENSE  README.md  deploy.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml
about/about/: index.html
about/license/: index.html
about/release-notes/: index.html
articles/test/: index.html
blog/: index.html
blog/archive/2024/: index.html
blog/category/blog/: index.html
blog/category/markdown/: index.html
blog/category/mkdocs/: index.html
blog/category/mkdocstrings/: index.html
blog/category/python/: index.html
docs/: index.md
docs/about/: about.md  license.md  release-notes.md
docs/notes/: index.md
docs/notes/cpp/: index.md  start.md
docs/notes/markdown/: started.md
docs/notes/python/: index.md  start.md
docs/notes/python/alembic/: alembic.md
docs/notes/python/sqlalchemy/: sqlalchemy-1.x.md
docs/projects/: index.md
docs/templates/: posts_list.html
guide/admonition/: index.html
guide/blog/: index.html
guide/codehilite/: index.html
guide/footnotes/: index.html
guide/getting-started/: index.html
guide/markdown-specimen/: index.html
guide/metadata/: index.html
guide/mkdocs-customization/: index.html
guide/mkdocstrings/: index.html
guide/permalinks/: index.html
guide/pymdown/: index.html
guide/revision-date/: index.html
notes/: index.html
notes/cpp/: index.html
notes/cpp/start/: index.html
notes/markdown/started/: index.html
notes/python/: index.html
notes/python/alembic/alembic/: index.html
notes/python/start/: index.html
projects/: index.html
projects/demo/getting-started/: index.html
projects/demo/setup/: index.html
scripts/: deploy.sh  setup.sh
search/: search_index.json
(+4 files in other folders)
