[tool.poetry]
name = "my-docs"
version = "0.1.0"
description = "my docs for github pages"
authors = ["codemaxi <codemaxi@163.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.21"
pymdown-extensions = "^10.8.1"
fontawesome-markdown = "^0.2.6"
mkdocstrings = "^0.25.1"
markdown-include = "^0.8.1"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
