[tool.poetry]
name = "my-docs"
version = "0.1.0"
description = "my docs for github pages"
authors = ["codemaxi <codemaxi@163.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.21"
mkdocs-exclude = "^1.0.2"
mkdocs-redirects = "^1.2.1"
mkdocs-autorefs = "^1.0.1"
mkdocstrings = {extras = ["python", "shell"], version = "^0.25.1"}
pymdown-extensions = "^10.8.1"
fontawesome-markdown = "^0.2.6"
markdown-include = "^0.8.1"
markdown-exec = "^1.8.1"
markdown-callouts = "^0.4.0"
mdformat = "^0.7.17"
mdformat-admon = "^2.0.3"
mdformat-footnote = "^0.1.1"
mdformat-frontmatter = "^2.0.8"
mdformat-gfm = "^0.3.6"
mdformat-mkdocs = "^2.0.11"
mdformat-ruff = "^0.1.3"
mdformat-simple-breaks = "^0.0.1"
mdformat-tables = "^0.4.1"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
